// To compile: protoc -I=. --go_out=. service.proto

// Definition of protobufs for directives.
syntax = "proto2";

package secret_service;

// Epochs must increase monotonically and be > 0
message object_id_message {
  required string obj_name                    = 1;
  optional int32 obj_epoch                    = 2;
}

message secret_service_request {

  enum operation_type {
    READ = 1;
    WRITE = 2;
    CREATE = 3;
    DELETE = 4;
    NOP = 5;
  }
  optional operation_type op = 1;

  optional string obj_name = 2;

  optional int32 obj_epoch = 3;

  // Fields for type: WRITE.
  optional string new_type = 4;
  optional bytes new_val  = 5;

  // Fields for type: CREATE (in addition to above fields).
  optional string protector_name = 6;
  optional int32 protector_epoch = 7;

  // Directives that are processed before processing request.
  repeated bytes directives = 8;
}

message secret_service_response {
  optional string error_message = 1;

  // Fields for response to READ.
  optional string secret_type = 2;
  optional bytes secret_val = 3;
}
